--- a/server/release.yaml
+++ b/server/release.yaml
@@ -1,7 +1,12 @@
 apiVersion: v1
+kind: Namespace
+metadata:
+  name: busybox2
+---
+apiVersion: v1
 kind: Pod
 metadata:
-  name: busybox
+  name: busybox2
   namespace: busybox2
 spec:
   containers:
@@ -10,5 +15,5 @@ spec:
       - sleep
       - "3600"
     imagePullPolicy: IfNotPresent
-    name: busybox
+    name: busybox2
   restartPolicy: Never
