--- a/server/release.yaml
+++ b/server/release.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: demo-gitops
+  name: demo-gitops2
 ---
 apiVersion: v1
 kind: Pod
 metadata:
   name: busybox2
-  namespace: demo-gitops
+  namespace: demo-gitops2
 spec:
   containers:
   - image: busybox
