--- a/server/release.yaml
+++ b/server/release.yaml
@@ -4,10 +4,15 @@ metadata:
   name: demo-gitops2
 ---
 apiVersion: v1
+kind: Namespace
+metadata:
+  name: demo-gitops
+---
+apiVersion: v1
 kind: Pod
 metadata:
   name: busybox2
-  namespace: demo-gitops2
+  namespace: demo-gitops
 spec:
   containers:
   - image: busybox
