--- a/server/release.yaml
+++ b/server/release.yaml
@@ -6,6 +6,11 @@ metadata:
 apiVersion: v1
 kind: Namespace
 metadata:
+  name: demo-gitops2
+---
+apiVersion: v1
+kind: Namespace
+metadata:
   name: demo-gitops
 ---
 apiVersion: v1
