--- a/server/release.yaml
+++ b/server/release.yaml
@@ -1,23 +1,13 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: demo-gitops3
----
-apiVersion: v1
-kind: Namespace
-metadata:
   name: demo-gitops2
----
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: demo-gitops
 ---
 apiVersion: v1
 kind: Pod
 metadata:
-  name: busybox
-  namespace: demo-gitops
+  name: busybox2
+  namespace: demo-gitops2
 spec:
   containers:
   - image: busybox
@@ -25,5 +15,5 @@ spec:
       - sleep
       - "3600"
     imagePullPolicy: IfNotPresent
-    name: busybox
+    name: busybox2
   restartPolicy: Never
