--- a/server/release.yaml
+++ b/server/release.yaml
@@ -1,13 +1,18 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: demo-gitops2
+  name: demo-gitops1
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: demo-gitops
 ---
 apiVersion: v1
 kind: Pod
 metadata:
-  name: busybox2
-  namespace: demo-gitops2
+  name: busybox
+  namespace: demo-gitops
 spec:
   containers:
   - image: busybox
@@ -15,5 +20,5 @@ spec:
       - sleep
       - "3600"
     imagePullPolicy: IfNotPresent
-    name: busybox2
+    name: busybox
   restartPolicy: Never
