--- a/server/release.yaml
+++ b/server/release.yaml
@@ -1,7 +1,12 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: demo-gitops1
+  name: demo-gitops3
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: demo-gitops3
 ---
 apiVersion: v1
 kind: Namespace
