--- a/server/release.yaml
+++ b/server/release.yaml
@@ -17,7 +17,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: busybox
-  namespace: demo-gitops
+  namespace: demo-gitops2
 spec:
   containers:
   - image: busybox
@@ -25,5 +25,5 @@ spec:
       - sleep
       - "3600"
     imagePullPolicy: IfNotPresent
-    name: busybox
+    name: busybox2
   restartPolicy: Never
