--- a/server/release.yaml
+++ b/server/release.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: demo2
+  name: demo
 ---
 apiVersion: v1
 kind: Pod
 metadata:
   name: busybox
-  namespace: demo2
+  namespace: demo
 spec:
   containers:
   - image: busybox
