--- a/server/release.yaml
+++ b/server/release.yaml
@@ -17,3 +17,8 @@ spec:
     imagePullPolicy: IfNotPresent
     name: busybox
   restartPolicy: Never
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: demo1
